# building-a-database-with-rust

./: .gitignore  Building a Database in Rust.pptx  Database Design.drawio  Final Report Draft.docx  Progression Report Draft.docx  README.txt  ~$ogression Report Draft.docx  ~WRL0003.tmp  ~WRL3506.tmp
Database - Client/: Cargo.toml  grep  output.txt
Database - Client/src/: client.rs  main.rs
Database - Server/: Cargo.toml  checkLines.sh  log.txt  serverSleep.sh
Database - Server and Client Combined (Testing)/: log.txt
Database - Server and Client Combined (Testing)/src/: client.rs  main.rs
Database - Server/src/: database.rs  main.rs  server.rs
Rust/: stringManipulator.rs
Rust/Network/btree-database-server/: Cargo.toml  log.txt  telnet connect script.bat
Rust/Network/btree-database-server/src/: client.rs  database.rs  main.backup  main.rs  server.rs
Rust/Network/btree-database-server/src/server/: database.rs
Rust/Network/counter-database-server/src/: main.rs
Rust/Network/database-testing-client/: Cargo.toml
Rust/Network/database-testing-client/src/: main.rs
Rust/Network/echo-server v1/src/: main.rs
Rust/Network/echo-server v2/src/: main.rs
Rust/Network/hello-world/: Cargo.toml
Rust/Network/hello-world/src/: main.rs
Rust/Network/webserver/: Cargo.toml
Rust/Network/webserver/src/: lib.rs
Rust/String Manipulation/: functions.rs  measuringTime.rs  result.txt
