[package]
name = "database-server"
version = "0.1.0"
authors = ["John McMenemy <john.mcmenemy.2017@uni.strath.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
